fixed minor spacing issue

--- a/src/css/Toolbar.css
+++ b/src/css/Toolbar.css
@@ -117,21 +117,15 @@ dropdown-item.active, .dropdown-item:active {
   background-color: rgba(29, 153, 202, 0.7) !important;
 }
 
+.dropdown-toggle .nav-link {
+  padding-left: 0px !important;
+}
+
 @media only screen and (max-width: 1150px) {
   .dropdown-menu {
     padding: 1rem 0;
     margin: 0rem 0 0;
   }
-
-
-@media only screen and (min-width: 768px){
-.navbar-expand-md .navbar-nav .nav-link {
-    padding-right: 0rem !important;
-    padding-left: 0rem !important;
-}
-}
-
-
 
 
 @media only screen and (max-width: 768px){
@@ -145,3 +139,5 @@ dropdown-item.active, .dropdown-item:active {
   margin-left: 10px;
 }}
 }
+
+@import "../../node_modules/bootstrap/dist/css/bootstrap.css"
